<resources>
    <string name="app_name">QuizApp</string>
    <string name="play">Play</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_count">%d of %d questions</string>
    <string name="quiz_score">%d of %d</string>
    <string name="true_answer">True</string>
    <string name="false_answer">False</string>
    <string name="next">Next</string>
    <string name="restart">Restart</string>
    <string name="share_result">Share result</string>
    <string name="category">Category</string>
    <string name="difficulty">Difficulty</string>
    <string name="score">Score</string>
    <string name="home">Home</string>
    <string name="easy">Easy</string>
    <string name="correct_answer_response">Correct answer!</string>
    <string name="wrong_answer_response">Wrong answer!</string>
    <plurals name="questions">
        <item quantity="one">%d question</item>
        <item quantity="other">%d questions</item>
    </plurals>
</resources>