<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.QuizDetailFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.quizapp.model.QuizViewModel" />

        <variable
            name="quizDetailFragment"
            type="com.example.quizapp.ui.QuizDetailFragment" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="0dp">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_margin="0dp"
                        android:scaleType="centerCrop"
                        android:src="@{quizDetailFragment.getResources().getDrawable(viewModel.quiz.imageResourceId)}"
                        app:srcCompat="@drawable/quiz_1" />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:text="@{viewModel.quiz.title}"
                        android:textAppearance="?attr/textAppearanceHeadline4"
                        tools:text="My quiz title" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:text="@{viewModel.quiz.description}"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        tools:text="My quiz description" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/category_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/category"
                            android:textAppearance="?attr/textAppearanceCaption" />

                        <TextView
                            android:id="@+id/category"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.quiz.category.toString()}"
                            android:textAppearance="?attr/textAppearanceBody1"
                            tools:text="SPORT" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/difficulty_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/difficulty"
                            android:textAppearance="?attr/textAppearanceCaption" />

                        <TextView
                            android:id="@+id/difficulty"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.quiz.difficulty.toString()}"
                            android:textAppearance="?attr/textAppearanceBody1"
                            tools:text="EASY" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/number_of_questions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:text="@{@plurals/questions(viewModel.quiz.getNumberOfQuestions(), viewModel.quiz.getNumberOfQuestions())}"
                        android:textAppearance="?attr/textAppearanceBody1"
                        tools:text="7 questions" />

                    <Button
                        android:id="@+id/play"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="8dp"
                        android:onClick="@{() -> quizDetailFragment.startQuiz(viewModel.quiz.id)}"
                        android:text="@string/play" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

</layout>