<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.quizapp.model.QuizViewModel" />

        <variable
            name="questionFragment"
            type="com.example.quizapp.ui.QuestionFragment" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    tools:text="3 of 10" />

                <TextView
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    tools:text="Example Question Text" />

                <LinearLayout
                    android:id="@+id/multiple_answer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/answer1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_marginStart="8dp"
                        android:onClick="@{() -> questionFragment.onSubmitAnswer(0)}"
                        tools:text="a1" />

                    <Button
                        android:id="@+id/answer2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:onClick="@{() -> questionFragment.onSubmitAnswer(1)}"
                        tools:text="a2" />

                    <Button
                        android:id="@+id/answer3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:onClick="@{() -> questionFragment.onSubmitAnswer(2)}"
                        tools:text="a3" />

                    <Button
                        android:id="@+id/answer4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:onClick="@{() -> questionFragment.onSubmitAnswer(3)}"
                        tools:text="a4" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/boolean_answer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/answer_true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:onClick="@{() -> questionFragment.onSubmitAnswer(0)}"
                        android:text="@string/true_answer" />

                    <Button
                        android:id="@+id/answer_false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:onClick="@{() -> questionFragment.onSubmitAnswer(1)}"
                        android:text="@string/false_answer" />

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/answer_response"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:drawableStart="@drawable/ic_baseline_correct"
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle=""
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Correct answer!" />

                    <Button
                        android:id="@+id/next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_margin="4dp"
                        android:text="@string/next"
                        style="?attr/materialButtonOutlinedStyle"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>